Stop using FileUtils when Files has the same methods and accepts paths.